<resources>
    <string name="app_name">Klik Darurat</string>

    <!-- Emergency Service -->
    <string name="emergency_service_tv_title">Layanan Darurat</string>
    <string name="emergency_service_tv_callcenter">Call Center</string>
    <string name="emergency_service_tv_ambulans">Ambulans</string>
    <string name="emergency_service_tv_polisi">Polisi</string>
    <string name="emergency_service_tv_damkar">Damkar</string>
    <string name="emergency_service_tv_basarnas">Basarnas</string>
    <string name="emergency_service_tv_bnpb">BNPB</string>
    <string name="emergency_service_tv_pln">PLN</string>
    <string name="emergency_service_tv_jasamarga">Jasa Marga</string>

    <!-- Emergency Service Location -->
    <string name="emergency_service_location_tv_title">Lokasi Layanan Darurat</string>
    <string name="emergency_service_location_chip_hospital">Rumah Sakit</string>
    <string name="emergency_service_location_chip_police">Kantor Polisi</string>
    <string name="emergency_service_location_chip_fire_station">Pemadam Kebakaran</string>

    <!-- Personal Emergency Contact -->
    <string name="personal_emergency_contact_tv_title">Kontak Darurat</string>
    <string name="personal_emergency_contact_tv_a_z">A - Z</string>
    <string name="personal_emergency_contact_tv_z_a">Z - A</string>
    <string name="personal_emergency_contact_tv_sort">Sort</string>
    <string name="personal_emergency_contact_tv_empty">Tidak ada daftar kontak!</string>

    <!-- Add Personal Emergency Contact -->
    <string name="add_personal_emergency_contact_tv_title">Tambah Kontak</string>

    <!-- Add Personal Emergency Contact -->
    <string name="edit_personal_emergency_contact_tv_title">Edit Kontak</string>

    <!-- User Profile -->
    <string name="user_profile_tv_title">Profil Saya</string>

    <!-- Edit User Profile -->
    <string name="edit_user_profile_tv_title">Edit Profile</string>

    <!-- Login -->
    <string name="login_tv_title">Masuk</string>
    <string name="login_btn_register_account">Daftar Akun Baru</string>

    <!-- Register -->
    <string name="register_tv_title">Daftar Akun Baru</string>
    <string name="register_btn_login_account">Masuk</string>

    <!-- Label -->
    <string name="label_full_name">Nama Lengkap</string>
    <string name="label_phone_number">Nomor Telepon</string>
    <string name="label_email">Email</string>
    <string name="label_address">Alamat</string>
    <string name="label_forgot_password">Lupa kata sandi?</string>
    <string name="label_reset_password">Atur Ulang Kata Sandi</string>
    <string name="label_edit">Edit</string>
    <string name="label_save">Simpan</string>

    <!-- Hint -->
    <string name="hint_full_name">Nama Lengkap</string>
    <string name="hint_phone_number">Nomor Telepon</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Alamat</string>
    <string name="hint_password">Kata Sandi</string>

    <!-- Dialog -->
    <string name="dialog_yes">Ya</string>
    <string name="dialog_send">Kirim</string>
    <string name="dialog_delete">Hapus</string>
    <string name="dialog_cancel">Batal</string>

    <!-- Button -->
    <string name="button_register">Daftar</string>
    <string name="button_login">Masuk</string>
    <string name="button_logout">Keluar</string>

    <!-- Bottom Navigation -->
    <string name="nav_emergency_service">Layanan Darurat</string>
    <string name="nav_personal_emergency_contact">Kontak Darurat</string>
    <string name="nav_emergency_service_location">Lokasi</string>
    <string name="nav_user_profile">Profil</string>
</resources>